--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
     </div>
     <div class="page" id="tablePage"><img src="back.jpeg" id="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/></div>
     <div id="popup"><img/></div>
-    <div id="sideBar">
-		<div id="hints"></div>
-		<div id="equip"><table id="equip-table"><tr id="equip-title"><td>HAND</td></tr><tr  id="equip-tr"><td><img id="equipImg" onclick="unequip()"/></td></tr></table></div>
-		<div id="inventory"><table id="inventory-table"><tr><td id="inventory-1"><img src="knife.png" onclick="equipItem(this)"/></td><td id="inventory-2"><img onclick="equipItem(this)"/></td><td id="inventory-3"><img onclick="equipItem(this)"/></td></tr><tr><td id="inventory-4"><img onclick="equipItem(this)"/></td><td id="inventory-5"><img onclick="equipItem(this)"/></td><td id="inventory-6"><img onclick="equipItem(this)"/></td></tr></table></div>
-		
-	</div>
+    <div id="sideBar"><div id="hints"></div><div id="inventory"><table id="inventory-table"><tr><td id="inventory-1">&nbsp;</td><td id="inventory-2">&nbsp;</td><td id="inventory-3">&nbsp;</td></tr><tr><td id="inventory-4">&nbsp;</td><td id="inventory-5">&nbsp;</td><td id="inventory-6">&nbsp;</td></tr></table></div></div>
 </body>
 </html>
