Delete the popup window before placing it to the inventory

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="rows" id="row-2"><div class="columns"><img src="table.jpg" onclick="changePage(this.parentNode.parentNode.parentNode.id, 'tablePage')"></div></div>
         <div class="rows" id="row-3"></div>
         <div class="rows" id="row-4"></div>
-        <div class="rows" id="row-5"><div class="columns"><img src="knife.png" onclick="showPopUp(this.src, 1)"></div></div>
+        <div class="rows" id="row-5"><div class="columns"><img src="knife.png" id="knife" onclick="showPopUp(this.src, this.id, 1)"></div></div>
         <div class="rows" id="row-6"></div>
         <div class="rows" id="row-7"></div>
         <div class="rows" id="row-8"></div>
