--- a/index.html
+++ b/index.html
@@ -23,12 +23,23 @@
 			<div class="rows" id="row-5"><div class="columns"><img src="knife.png" onclick="showPopUp(this.src, 1)"></div></div>
 			<div class="rows" id="row-6"></div>
 			<div class="rows" id="row-7"></div>
-			<div class="rows" id="row-8"></div>
+			<div class="rows" id="row-8"><div class="columns"><img src="pc.png" onclick="changePage(this.parentNode.parentNode.parentNode.id, 'loginPage')"></div></div>
 			<div class="rows" id="row-9"></div>
 			<div class="rows" id="row-10"></div>
 		</div>
-		<div class="page tablePage" id="tablePage"><img src="back.jpeg" id="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/></div>
-		<div id="popup"><img/></div>
+		<div class="page tablePage" id="tablePage"><img src="back.jpeg" class="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/></div>
+		<div class="page loginPage" id="loginPage">
+            <img src="back.jpeg" class="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/>
+            <div id="loginForm">
+                <form>
+                Username
+                <br><input name="loginUsername" id="loginUsername"><br>
+                Password
+                <br><input name="loginPassword" id="loginPassword"><br>
+                <button type="button" onclick="validateLogin()">Login</button>
+            </form></div>
+        </div>
+        <div id="popup"><img/></div>
 	</div>
 	<div id="sideBar">
 		<div id="hints"></div>
