--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="rows" id="row-2"><div class="columns"><img src="table.jpg" onclick="changePage(this.parentNode.parentNode.parentNode.id, 'tablePage')"></div></div>
 			<div class="rows" id="row-3"></div>
 			<div class="rows" id="row-4"></div>
-			<div class="rows" id="row-5"><div class="columns"><img src="knife.png" onclick="showPopUp(this.src, 1)"></div></div>
+			<div class="rows" id="row-5"><div class="columns"><img src="knife.png" onclick="showPopUp(this.src, this)"></div></div>
 			<div class="rows" id="row-6"></div>
 			<div class="rows" id="row-7"></div>
 			<div class="rows" id="row-8"><div class="columns"><img src="pc.png" onclick="changePage(this.parentNode.parentNode.parentNode.id, 'loginPage')"></div></div>
@@ -28,23 +28,24 @@
 			<div class="rows" id="row-10"></div>
 		</div>
 		<div class="page tablePage" id="tablePage"><img src="back.jpeg" class="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/></div>
+
 		<div class="page loginPage" id="loginPage">
             <img src="back.jpeg" class="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/>
-            <div id="loginForm">
-                <form>
-                Username
-                <br><input name="loginUsername" id="loginUsername"><br>
-                Password
-                <br><input name="loginPassword" id="loginPassword"><br>
-                <button type="button" onclick="validateLogin()">Login</button>
-            </form></div>
+            <form name="loginForm" id="loginForm">
+				Username<br><input type="text" name="userID"/><br>
+				Password<br><input type="password" name="password"/><br><br>
+				<input type="button" onclick="validateLogin(this.form)" value="Login"/>
+			</form>
+			<div id="sonPage" style="display: none;">
+				<p>Add the SON info here!</p>
+			</div>
         </div>
         <div id="popup"><img/></div>
 	</div>
 	<div id="sideBar">
 		<div id="hints"></div>
 		<div id="equip"><table id="equip-table"><tr id="equip-title"><td>HAND</td></tr><tr  id="equip-tr"><td><img id="equipImg" onclick="unequip()"/></td></tr></table></div>
-		<div id="inventory"><table id="inventory-table"><tr><td id="inventory-1"><img src="knife.png" onclick="equipItem(this)"/></td><td id="inventory-2"><img onclick="equipItem(this)"/></td><td id="inventory-3"><img onclick="equipItem(this)"/></td></tr><tr><td id="inventory-4"><img onclick="equipItem(this)"/></td><td id="inventory-5"><img onclick="equipItem(this)"/></td><td id="inventory-6"><img onclick="equipItem(this)"/></td></tr></table></div>	
+		<div id="inventory"><table id="inventory-table"><tr><td id="inventory-1"><img src="knife.png" id="knife" onclick="equipItem(this)"/></td><td id="inventory-2"><img onclick="equipItem(this)"/></td><td id="inventory-3"><img onclick="equipItem(this)"/></td></tr><tr><td id="inventory-4"><img onclick="equipItem(this)"/></td><td id="inventory-5"><img onclick="equipItem(this)"/></td><td id="inventory-6"><img onclick="equipItem(this)"/></td></tr></table></div>
 	</div>
 	</div>	
 </body>
