Table with pc added!

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="page page-1" id="page-1">
 			<div id="ventilator"><img src="images/ventilator_closed.png" onclick="changeVentilatorImage(this)"/></div>
-			<div id="table"><img src="images/table.png" onclick="changePage(this.parentNode.parentNode.id, 'drawerPage')">"></div>
+			<div id="table"><img src="images/table_with_pc.png" onclick="changePage(this.parentNode.parentNode.id, 'drawerPage')">"></div>
 			<div id="chair"><img src="images/armchair.png" onclick="changeChairImage(this)"></div>
 		</div>
 		<div class="page tablePage" id="tablePage"><img src="back.jpeg" class="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/></div>
