--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 		</div>
 		<div class="page page-1" id="page-1">
 			<div id="ventilator"><img src="images/ventilator_closed.png" onclick="changeVentilatorImage(this)"/></div>
+			<div id="bookcase"><img src="images/bookcase.png" onclick="changeVentilatorImage(this)"/></div>
+			<div id="chest"><img src="images/chest.png" onclick="changeChestImage(this)"/></div>
 			<div id="table"><img src="images/table.png" onclick="changePage(this.parentNode.parentNode.id, 'drawerPage')">"></div>
 			<div id="chair"><img src="images/armchair.png" onclick="changeChairImage(this)"></div>
 		</div>
 		<div class="page tablePage" id="tablePage"><img src="back.jpeg" class="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/></div>
 		<div class="page drawerPage" id="drawerPage"><img src="back.jpeg" class="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/><div id="keydiv"><img src="images/key.png" id="keyimage" onclick="takeKey()" /></div><div id="allColorBoxes"><div id="colorBox1" onclick="colorSelector(this)"></div><div id="colorBox2" onclick="colorSelector(this)"></div><div id="colorBox3" onclick="colorSelector(this)"></div><div id="colorBox4" onclick="colorSelector(this)"></div><div id="checkButton" onclick="checkcolors()"></div></div></div>
-		<div class="page pcPage" id="pcPage"></div>
 		<div class="page loginPage" id="loginPage">
             <img src="back.jpeg" class="back-button" onclick="changePage(this.parentNode.id, 'page-1')"/>
             <form name="loginForm" id="loginForm">
